@@ -14,6 +14,7 @@ import com.redis.riot.core.QuietMapAccessor;
 import com.redis.riot.file.xml.XmlItemReader;
 import com.redis.riot.file.xml.XmlItemReaderBuilder;
 import com.redis.riot.file.xml.XmlObjectReader;
+import com.redis.riot.rdi.ChangeEventToStreamMessage;
 import com.redis.riot.replicate.Replicate;
 import com.redis.spring.batch.item.redis.common.KeyValue;
 import com.redis.spring.batch.item.redis.gen.GeneratorItemReader;
@@ -359,7 +360,8 @@ class StackRiotTests extends RiotTests {
             Map<String, String> hash = redisCommands.hgetall(beer);
             Assertions.assertTrue(hash.containsKey("name"));
             Assertions.assertTrue(hash.containsKey("brewery_id"));
-            Assertions.assertEquals(10, redisCommands.ttl(beer), 5);
+            Long actual = redisCommands.ttl(beer);
+            Assertions.assertEquals(10, actual, 5);
         }
     }
 
@@ -583,7 +585,7 @@ class StackRiotTests extends RiotTests {
         execute(info, filename);
         assertDbNotEmpty(redisCommands);
         DefaultKeyComparator<String, String> comparator = comparator(StringCodec.UTF8);
-        comparator.setIgnoreStreamMessageId(true);
+        comparator.setStreamMessageIds(false);
         List<KeyComparison<String>> comparisons = compare(info, StringCodec.UTF8, comparator);
         Assertions.assertFalse(comparisons.isEmpty());
         Assertions.assertFalse(comparisons.stream().anyMatch(c -> c.getStatus() != Status.OK));
@@ -600,11 +602,10 @@ class StackRiotTests extends RiotTests {
         execute(info, filename);
         assertDbNotEmpty(redisCommands);
         DefaultKeyComparator<String, String> comparator = comparator(StringCodec.UTF8);
-        comparator.setIgnoreStreamMessageId(true);
+        comparator.setStreamMessageIds(false);
         List<KeyComparison<String>> comparisons = compare(info, StringCodec.UTF8, comparator);
         Assertions.assertFalse(comparisons.isEmpty());
-        KeyComparison<String> missing = comparisons.stream().filter(c -> c.getStatus() != Status.OK)
-                .collect(Collectors.toList()).get(0);
+        KeyComparison<String> missing = comparisons.stream().filter(c -> c.getStatus() != Status.OK).toList().get(0);
         Assertions.assertEquals(Status.MISSING, missing.getStatus());
         Assertions.assertEquals(emptyStream, missing.getSource().getKey());
     }
@@ -767,6 +768,47 @@ class StackRiotTests extends RiotTests {
             } else {
                 Assertions.assertNull(result);
             }
+        }
+    }
+
+    @SuppressWarnings("unchecked")
+    @Test
+    void rdiStreamGen(TestInfo info) throws Exception {
+        execute(info, "snowflake-import-rdi-gen");
+        String streamKey = DebeziumStreamArgs.DEFAULT_STREAM_PREFIX + "riotx.raw_pos.incremental_order_header";
+        List<StreamMessage<String, String>> messages = redisCommands.xrange(streamKey, Range.create("-", "+"));
+        Assertions.assertEquals(123, messages.size());
+        ObjectMapper mapper = new ObjectMapper();
+        for (StreamMessage<String, String> message : messages) {
+            Map<String, String> body = message.getBody();
+            Map<String, Object> key = mapper.readValue(body.get(ChangeEventToStreamMessage.KEY), Map.class);
+            Map<String, Object> value = mapper.readValue(body.get(ChangeEventToStreamMessage.VALUE), Map.class);
+            Map<String, Object> after = (Map<String, Object>) value.get("after");
+            Assertions.assertEquals(key, after);
+            Assertions.assertTrue(after.containsKey("order_id"));
+            Assertions.assertTrue(after.containsKey("customer_id"));
+            Assertions.assertTrue(after.containsKey("product_id"));
+        }
+    }
+
+    @SuppressWarnings("unchecked")
+    @Test
+    void rdiStreamGenKeyColumns(TestInfo info) throws Exception {
+        execute(info, "snowflake-import-rdi-gen-key");
+        String streamKey = DebeziumStreamArgs.DEFAULT_STREAM_PREFIX + "riotx.raw_pos.incremental_order_header";
+        List<StreamMessage<String, String>> messages = redisCommands.xrange(streamKey, Range.create("-", "+"));
+        Assertions.assertEquals(123, messages.size());
+        ObjectMapper mapper = new ObjectMapper();
+        for (StreamMessage<String, String> message : messages) {
+            Map<String, String> body = message.getBody();
+            Map<String, Object> key = mapper.readValue(body.get(ChangeEventToStreamMessage.KEY), Map.class);
+            Assertions.assertEquals(1, key.size());
+            Assertions.assertTrue(key.containsKey("order_id"));
+            Map<String, Object> value = mapper.readValue(body.get(ChangeEventToStreamMessage.VALUE), Map.class);
+            Map<String, Object> after = (Map<String, Object>) value.get("after");
+            Assertions.assertTrue(after.containsKey("order_id"));
+            Assertions.assertTrue(after.containsKey("customer_id"));
+            Assertions.assertTrue(after.containsKey("product_id"));
         }
     }
 
